--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <a class="gmail" href="#"> DevGreenMarshall@gmail.com</a>
                 <a class="instagram" href="#"> Instagram</a>
                 <a class="telegram" href="#"> Telegram</a>
-                <a class="en" href="#">En</a> 
-                <a class="ru" href="index.html">Ru</a>                
+                <a class="en" href="index.html">En</a> 
+                <a class="ru" href="#">Ru</a>                
             </div>
         </div>
     </section>
@@ -40,12 +40,15 @@
 
     <!-- Navigation start -->
 
-    <header class="content-box-gray ">
+    <header class="content-box-gray">
         <div class="container">
             <div class="header-inner">
                 <div class="header__logo">
                     <a  href="index.html">
-                        <img class="logo__icon" src="/assets/media/img/logo.png" alt="">
+                        <img class="logo__icon visible__stat" src="/assets/media/img/logo.png" alt="">
+                    </a>
+                    <a class="logo__text visible__scroll" href="index.html">
+                        Green Marshall
                     </a>
                 </div>
                 <nav class="menu" role="navigation">
