--- a/index.html
+++ b/index.html
@@ -263,20 +263,22 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6 col-sm-offset-3">
-                    <form id="form" role="form" action="#">
-
- <!-- Hidden Required Fields -->
-
-		<input type="hidden" name="project_name" value="Site Name">
-		<input type="hidden" name="admin_email" value="admin@mail.com">
-        <input type="hidden" name="form_subject" value="Form Subject">
-        
-<!-- END Hidden Required Fields -->
-        
-                    </form>
+            <form role="form">
+                <div class="form-group">
+                    <label class="sr-only" for="form_name">Name</label>
+                    <input type="text" id="form_name" class="form-control" name="f_name" placeholder="Name">
                 </div>
+                <div class="form-group">
+                    <label class="sr-only" for="form_email">Email</label>
+                    <input type="email" id="form_email" class="form-control" name="f_email" placeholder="E-mail">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" id="form_message" name="f_message" rows="7" placeholder="Message"></textarea>
+                </div>
+                <button id="sendMail" class="btn btn-success" type="button">Send Message</button>
+            </form>
+            <div id="errorMessage">
+
             </div>
         </div>
     </footer>
@@ -291,6 +293,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <script src="/assets/js/slick.min.js"></script>
     <!-- My script -->
+    <script src="/assets/js/formMail.js"></script>
     <script src="/assets/js/main.js"></script>
     <!-- Script end -->
 </body>
