--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="form-group">
                     <textarea class="form-control" id="form_message" name="f_message" rows="7" placeholder="Message"></textarea>
                 </div>
-                <button id="sendMail" class="btn btn-success" type="button">Send Message</button>
+                <button id="sendMail" class="btn btn-success" type="submit">Send Message</button>
             </form>
             <div id="errorMessage">
 
@@ -293,7 +293,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <script src="/assets/js/slick.min.js"></script>
     <!-- My script -->
-    <script src="/assets/js/formMail.js"></script>
     <script src="/assets/js/main.js"></script>
     <!-- Script end -->
 </body>
