--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Navigation start -->
 
-    <header class="content-box-gray">
+    <header>
         <div class="container">
             <div class="header-inner">
                 <div class="header__logo" role="banner">
