--- a/index.html
+++ b/index.html
@@ -387,20 +387,27 @@
 
     <!-- Fancybox start -->
 
-    <div style="display: none;" id="services__modal">
-        <h2>Hello!</h2>
-        <p>You are awesome!</p>
-      </div>
+    <div class="fancybox modal__services" id="services__modal">
+        <div class="row modal__proccess">
+            <div class="process__design">
 
-      <div style="display: none;" id="skills__modal">
-        <h2>Hello!</h2>
-        <p>You are awesome!</p>
-      </div>
+            </div>
+            <div class="process__code">
 
-      <div style="display: none;" id="portfolio__modal">
+            </div>
+
+        </div>
+    </div>
+
+    <div class="fancybox modal__skills" id="skills__modal">
         <h2>Hello!</h2>
         <p>You are awesome!</p>
-      </div>
+    </div>
+
+    <div class="fancybox modal__portfolio" id="portfolio__modal">
+        <h2>Hello!</h2>
+        <a href="http://easyscripters.ho.ua/">EasyScript</a>
+    </div>
 
     <!-- Fancybox end -->
 
