--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="header-inner">
                 <div class="header__logo" role="banner">
                     <a href="index.html">
-                        <img class="logo__icon visible__stat" src="/assets/media/img/logo.png" alt="">
+                        <img class="logo__icon visible__stat" src="/assets/media/img/logo.png">
                     </a>
                     <a class="logo__text visible__scroll" href="index.html">
                         Green Marshall
@@ -406,7 +406,7 @@
 
     <div class="fancybox modal__portfolio" id="portfolio__modal">
         <h2>Hello!</h2>
-        <a href="http://easyscripters.ho.ua/">EasyScript</a>
+        <a href="http://easyscripters.ho.ua/" target="blank">EasyScript</a>
     </div>
 
     <!-- Fancybox end -->
